[project]
name = "lapa"
version = "0.1.0"
description = "Latent Action Pre-Training (LAPA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax",
    "optax==0.1.7",
    "chex",
    "einops",
    "transformers==4.40.1",
    "datasets==2.13.0",
    "tqdm",
    "ml_collections",
    "wandb",
    "gcsfs",
    "requests",
    "typing-extensions",
    "sentencepiece",
    "Pillow",
    "ipdb",
    "imageio[ffmpeg]",
    "tiktoken",
    "jax[cuda12]<0.4.30",
    "jaxlib[cuda12]<0.4.30",
    "scipy==1.12.0",
    "albumentations",
    "uvicorn",
    "fastapi",
    "tux @ git+https://github.com/lhao499/tux.git",
    "laq",
    "latent_pretraining",
]

[tool.uv.workspace]
members = [
    "laq",
    "latent_pretraining",
]

[tool.uv.sources]
tux = { git = "https://github.com/lhao499/tux.git"}
laq = { workspace = true }
latent_pretraining = { workspace = true }
jax = { index = "jax-cuda" }
jaxlib = { index = "jax-cuda" }

[[tool.uv.index]]
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
name = "jax-cuda"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lapa"]
