[project]
name = "simpler_env"
version = "0.0.1"
description = "Simpler Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow_datasets==4.9.4",
    "tensorflow_hub==0.16.0",
    "rlds==0.1.8",
    "tf_agents==0.19.0",
    "dm-reverb[tensorflow]==0.14.0",
    "apache_beam==2.54.0",
    "tfds-nightly==4.9.4.dev202403220044",
    "tfp-nightly==0.25.0.dev20240322",
    "matplotlib",
    "IPython==8.22.2",
    "mediapy==1.2.0",
    "coacd",
    "dlimp @ git+https://github.com/kvablack/dlimp@d08da3852c149548aaa8551186d619d87375df08",
    "plotly",
    "distrax==0.1.5",
    "flax",
    "ml_collections",
    "wandb",
    "einops",
    "transformers",
    "scipy==1.12.0",
    "mani_skill2_real2sim",
]

[tool.uv.sources]
dlimp = { git = "https://github.com/kvablack/dlimp", rev = "d08da3852c149548aaa8551186d619d87375df08" }

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py310"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "True"
order_by_type = "False"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
